# apollonius

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  points.rs  utils.rs  vectors.rs
src/algebra/: angle.rs  matrix.rs  mod.rs  points.rs  vectors.rs
src/primitives/: aabb.rs  hyperplane.rs  hypersphere.rs  line.rs  mod.rs  segment.rs  triangle.rs
src/space/: mod.rs
src/space/linear_ops/: hyperplane.rs  hypersphere.rs  line.rs  mod.rs  segment.rs  triangle.rs
