[package]
name = "apollonius"
version = "0.0.5-alpha"
edition = "2024"
description = "A foundational geometry library for Rust, built with const generics."
license = "MIT OR Apache-2.0"

repository = "https://github.com/MDKMauricioKlainbard/apollonius"
keywords = ["geometry", "vector", "point", "euclidean", "math"]
categories = ["science", "algorithms", "data-structures", "mathematics"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"