[package]
name = "apollonius"
version = "0.1.0"
edition = "2024"
description = "N-dimensional Euclidean geometry for Rust: points, vectors, lines, segments, hyperspheres, hyperplanes, AABBs, triangles, and a unified intersection API—all with const generics."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MDKMauricioKlainbard/apollonius"
documentation = "https://docs.rs/apollonius"
homepage = "https://github.com/MDKMauricioKlainbard/apollonius"
keywords = ["math", "geometry", "2d", "3d", "collision"]
categories = [
    "science",
    "algorithms",
    "data-structures",
    "mathematics",
]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"